docs: Fix logo color in dark mode

--- a/src/resources/css/docs.css
+++ b/src/resources/css/docs.css
@@ -943,7 +943,7 @@ td code {
 	}
 
 	#logo {
-		filter: invert(1);
+		filter: invert(1) hue-rotate(180deg);
 	}
 	#zerossl-logo {
 		filter: invert(1) hue-rotate(180deg);
